# retro-amp

./: .gitignore  LICENSE  Plan.md  README.md  install.ps1  install.sh  pyproject.toml  retro-amp.spec  run.bat  run.ps1  setup.bat
.github/workflows/: release.yml
docs/: index.html  mp3-integrity-analyse.md
src/retro_amp/: __init__.py  __main__.py  app.py  app.tcss  i18n.py  themes.py
src/retro_amp/domain/: __init__.py  models.py  protocols.py
src/retro_amp/infrastructure/: __init__.py  audio_player.py  metadata_reader.py  playlist_store.py  settings.py  spectrum.py
src/retro_amp/locale/: de.json  en.json
src/retro_amp/screens/: __init__.py  about_screen.py  confirm_screen.py  info_screen.py  library_picker_screen.py  playlist_screen.py  rename_screen.py
src/retro_amp/services/: __init__.py  liner_notes_service.py  lyrics_service.py  metadata_service.py  player_service.py  playlist_service.py
src/retro_amp/widgets/: __init__.py  favorites_tree.py  file_table.py  folder_browser.py  info_panel.py  lyrics_panel.py  playlist_tree.py  search_panel.py  translation_panel.py  transport_bar.py  visualizer.py  youtube_panel.py
tests/: conftest.py  test_filename_parser.py  test_liner_notes.py  test_lyrics.py  test_metadata_reader.py  test_metadata_service.py  test_models.py  test_player_service.py  test_playlist_service.py  test_spectrum.py  test_themes.py
