[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-amp"
version = "0.1.0"
description = "Terminal-Musikplayer mit Retro-Charme — C64, Amiga, Atari ST"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pygame>=2.5.0",
    "mutagen>=1.47.0",
    "textual-themes>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
]

[project.scripts]
retro-amp = "retro_amp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
